--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,7 +31,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./terraform
+        working-directory: terraform
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
@@ -49,8 +49,8 @@ jobs:
     #     terraform workspace select $TF_WORKSPACE || terraform workspace new $TF_WORKSPACE
 
     - name: Terraform Plan
-      run: terraform plan -var-file="./workspace-vars/${TF_WORKSPACE}.tfvars"
+      run: terraform plan -var-file="workspace-vars/${TF_WORKSPACE}.tfvars"
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main'
-      run: terraform apply -auto-approve -var-file="./workspace-vars/${TF_WORKSPACE}.tfvars"
+      run: terraform apply -auto-approve -var-file="workspace-vars/${TF_WORKSPACE}.tfvars"
