--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,7 +56,8 @@ jobs:
       run: |
         curl -LO https://github.com/Azure/kubelogin/releases/latest/download/kubelogin-linux-amd64.zip
         unzip kubelogin-linux-amd64.zip
-        sudo mv kubelogin /usr/local/bin
+        sudo mv bin/linux_amd64/kubelogin /usr/local/bin/
+        kubelogin --version  # Optional: verify installation
 
     - name: Replace tag in deployment.yml and Deploy
       run: |
