--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,18 +46,20 @@ jobs:
         docker build -t ${{ secrets.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
         docker push ${{ secrets.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
-    - name: Set AKS Context
+    - name: Set AKS Context (admin, no AAD)
       uses: azure/aks-set-context@v3
       with:
         resource-group: ${{ secrets.RESOURCE_GROUP }}
         cluster-name: ${{ secrets.AKS_CLUSTER }}
+        admin: true
+        use-kubelogin: false
 
-    - name: Install kubelogin
-      run: |
-        curl -LO https://github.com/Azure/kubelogin/releases/latest/download/kubelogin-linux-amd64.zip
-        unzip kubelogin-linux-amd64.zip
-        sudo mv bin/linux_amd64/kubelogin /usr/local/bin/
-        kubelogin --version  # Optional: verify installation
+    # - name: Install kubelogin
+    #   run: |
+    #     curl -LO https://github.com/Azure/kubelogin/releases/latest/download/kubelogin-linux-amd64.zip
+    #     unzip kubelogin-linux-amd64.zip
+    #     sudo mv bin/linux_amd64/kubelogin /usr/local/bin/
+    #     kubelogin --version  # Optional: verify installation
 
     - name: Replace tag in deployment.yml and Deploy
       run: |
